# fitphone-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.postman/: resources.yaml
assets/: nudges.json
config/: gru4rec.yaml  gru4rec_lsapp.yaml  sasrec.yaml  sasrec_lsapp.yaml
docs/: README.md  architecture.md  datasets.md  findings.md  models.md
notebooks/: lsapp_eda.ipynb
src/: api.py  convert_livelab.py  convert_lsapp.py  eval_topk.py  habits.py  nudges.py  persistence.py  pkg_map.py  predict.py  retrain.py  rules.py  seed_demo.py  stats.py  train.py
